chore: Init Actions and website

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 # carutools
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/Church-Army/carutools/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/Church-Army/carutools/actions/workflows/R-CMD-check.yaml)
+[![Codecov test coverage](https://codecov.io/gh/Church-Army/carutools/graph/badge.svg)](https://app.codecov.io/gh/Church-Army/carutools)
 <!-- badges: end -->
 
 Carutools is a collection of tools developed for and used by [Church Army's](https://churcharmy.org/) [Research Unit](https://churcharmy.org/our-work/research/who-we-are/). These tools fall into two main categories:
