--- a/dev/flat_helpers.qmd
+++ b/dev/flat_helpers.qmd
@@ -88,8 +88,8 @@ range_labels <- function(x, width, start = NA,
 ```
 
 ```{r examples-range_labels}
-#' range_labels(1:10, width = 3)
-#' range_labels(1:10, width = 3, include = "lower", start = 0, explicit_zero = TRUE)
+range_labels(1:10, width = 3)
+range_labels(1:10, width = 3, include = "lower", start = 0, explicit_zero = TRUE)
 ```
 
 ```{r tests-range_labels}
@@ -151,12 +151,12 @@ relabeller <- function(...){
 ```
 
 ```{r examples-relabeller}
-#' fruits <- c("apple", "pear", "pear", "banana")
-#'
-#' fruit_relabel <- relabeller("pear" ~ "orange", "banana" ~ "plum")
-#' fruit_relabel(fruits)
-#'
-#' ## Normal use case
+fruits <- c("apple", "pear", "pear", "banana")
+
+fruit_relabel <- relabeller("pear" ~ "orange", "banana" ~ "plum")
+fruit_relabel(fruits)
+
+## Normal use case
 #' \dontrun{
 #' ggplot(palmerpenguins::penguins, aes(x = sex, y = flipper_length_mm)) +
 #'   geom_point(alpha = 0.5) +
@@ -331,15 +331,15 @@ tally_delimited_string <-
 ```
 
 ```{r examples tally_delimited_string}
-#' df <- data.frame(name = c("anna", "betty"),
-#'               fruits = c("apple, banana", "pear, banana, banana"))
-#'
-#' tally_delimited_string(df, fruits)
-#'
-#' tally_delimited_string(df, fruits, count = TRUE)
-#'
-#' tally_delimited_string(df, fruits, count = TRUE, names_repair = toupper)
-#'
-#' tally_delimited_string(df, fruits, keep = c("apple", "banana"))
-#'
+df <- data.frame(name = c("anna", "betty"),
+              fruits = c("apple, banana", "pear, banana, banana"))
+
+tally_delimited_string(df, fruits)
+
+tally_delimited_string(df, fruits, count = TRUE)
+
+tally_delimited_string(df, fruits, count = TRUE, names_repair = toupper)
+
+tally_delimited_string(df, fruits, keep = c("apple", "banana"))
+
 ```
